jit: harder better faster stronger
Co-authored-by: HoshinoTented <hoshinotented@qq.com>